# SX127x_GS

./: .gitignore  LICENSE  README.md  pyproject.toml
sx127x_gs/: __main__.py  driver.py  models.py  radio_controller.py  registers_and_params.py  sx1278_ax25_regs.txt  sx1278_norm_regs.txt  sx127x_driver.py  utils.py
sx127x_gs/interfaces/: base_interface.py  ethernet.py  serial.py
sx127x_gs/tests/: fsk_rx.py  fsk_tx.py  lora_rx.py  lora_tx.py
