[tool.poetry]
name = "sx127x-gs"
version = "0.1.0"
description = ""
authors = ["CrinitusFeles <crinitusfeles@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
pyserial = "^3.5"
pydantic = "^2.5.2"
event = {git = "https://github.com/CrinitusFeles/Event.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
